--- a/src/components/bugTracker/bugTracker.css
+++ b/src/components/bugTracker/bugTracker.css
@@ -54,7 +54,7 @@
     .b{
       flex-direction: column;
       width: 100%;
-      height: 210vw;
+      height: 195vw;
     }  
 
     .b-left{
